@@ -1,11 +1,9 @@
 package com.dtsx.astra.sdk.pcu;
 
-import com.dtsx.astra.sdk.AbstractApiClient;
-import com.dtsx.astra.sdk.db.domain.Datacenter;
-import com.dtsx.astra.sdk.pcu.domain.PcuGroup;
-import com.dtsx.astra.sdk.pcu.domain.PcuGroupDbAssociation;
+import com.dtsx.astra.sdk.pcu.domain.PcuGroupDatacenterAssociation;
 import com.dtsx.astra.sdk.pcu.exception.PcuGroupDbAssociationNotFound;
 import com.dtsx.astra.sdk.pcu.exception.PcuGroupNotFoundException;
+import com.dtsx.astra.sdk.AbstractApiClient;
 import com.dtsx.astra.sdk.utils.*;
 import com.fasterxml.jackson.core.type.TypeReference;
 import lombok.Getter;
@@ -18,7 +16,7 @@ import java.util.stream.Stream;
 
 @Slf4j
 public class PcuGroupDatacenterAssociationsClient extends AbstractApiClient {
-    private static final TypeReference<List<PcuGroupDbAssociation>> PCU_GROUP_DB_ASSOCIATIONS =
+    private static final TypeReference<List<PcuGroupDatacenterAssociation>> PCU_GROUP_DB_ASSOCIATIONS =
         new TypeReference<>() {};
 
     @Getter
@@ -49,11 +47,7 @@ public class PcuGroupDatacenterAssociationsClient extends AbstractApiClient {
             .anyMatch((assoc) -> assoc.getDatacenterUUID().equals(datacenterId));
     }
 
-    public boolean exist(@NonNull Datacenter datacenter) {
-        return exist(datacenter.getId());
-    }
-
-    public PcuGroupDbAssociation findByDatacenterId(@NonNull String datacenterId) {
+    public PcuGroupDatacenterAssociation findByDatacenterId(@NonNull String datacenterId) {
         Assert.isDatacenterID(datacenterId, "datacenter id");
 
         return findAll()
@@ -62,51 +56,35 @@ public class PcuGroupDatacenterAssociationsClient extends AbstractApiClient {
             .orElseThrow(() -> new PcuGroupDbAssociationNotFound(pcuGroupId, datacenterId));
     }
 
-    public PcuGroupDbAssociation findByDatacenter(@NonNull Datacenter datacenter) {
-        return findByDatacenterId(datacenter.getId());
-    }
-
-    public Stream<PcuGroupDbAssociation> findAll() {
+    public Stream<PcuGroupDatacenterAssociation> findAll() {
         val res = GET(getEndpointPcuAssociations() + "/" + pcuGroupId, getOperationName("findAll"));
 
-        return unmarshallOrThrow(res, PCU_GROUP_DB_ASSOCIATIONS, 200, "get pcu group db associations").stream();
+        return unmarshallOrThrow(res, PCU_GROUP_DB_ASSOCIATIONS, "get pcu group db associations").stream();
     }
 
-    public PcuGroupDbAssociation associate(@NonNull String datacenterId) {
+    public PcuGroupDatacenterAssociation associate(@NonNull String datacenterId) {
         Assert.isDatacenterID(datacenterId, "datacenter id");
 
         val res = POST(getEndpointPcuAssociations() + "/" + pcuGroupId + "/" + datacenterId, getOperationName("associate"));
 
-        return unmarshallOrThrow(res, new TypeReference<>() {}, 201, "associate db to pcu group");
-    }
-
-    public PcuGroupDbAssociation associate(@NonNull Datacenter datacenter) {
-        return associate(datacenter.getId());
+        return unmarshallOrThrow(res, new TypeReference<List<PcuGroupDatacenterAssociation>>() {}, "associate db to pcu group").get(0);
     }
 
     private record TransferReqBody(String fromPCUGroupUUID, String toPCUGroupUUID, String datacenterUUID) {}
 
-    public PcuGroupDbAssociation transfer(@NonNull String toPcuGroup, @NonNull String datacenterId) {
+    public PcuGroupDatacenterAssociation transfer(@NonNull String toPcuGroup, @NonNull String datacenterId) {
         Assert.isUUID(toPcuGroup, "target pcu group id");
         Assert.isDatacenterID(datacenterId, "datacenter id");
 
         val reqBody = JsonUtils.marshall(new TransferReqBody(this.pcuGroupId, toPcuGroup, datacenterId));
         val res = POST(getEndpointPcuAssociations() + "/transfer/" + pcuGroupId, reqBody, getOperationName("transfer"));
 
-        return unmarshallOrThrow(res, new TypeReference<>() {}, 200, "transfer db to pcu group");
-    }
-
-    public PcuGroupDbAssociation transfer(@NonNull PcuGroup toPcuGroup, @NonNull Datacenter datacenter) {
-        return transfer(toPcuGroup.getUuid(), datacenter.getId());
+        return unmarshallOrThrow(res, new TypeReference<List<PcuGroupDatacenterAssociation>>() {}, "transfer db to pcu group").get(0);
     }
 
     public void dissociate(@NonNull String datacenterId) {
         Assert.isDatacenterID(datacenterId, "datacenter id");
         DELETE(getEndpointPcuAssociations() + "/" + pcuGroupId + "/" + datacenterId, getOperationName("dissociate"));
-    }
-
-    public void dissociate(@NonNull Datacenter datacenter) {
-        dissociate(datacenter.getId());
     }
 
     // ---------------------------------
@@ -117,8 +95,9 @@ public class PcuGroupDatacenterAssociationsClient extends AbstractApiClient {
         return ApiLocator.getApiDevopsEndpoint(environment) + "/pcus/association";
     }
 
-    private <T> T unmarshallOrThrow(ApiResponseHttp res, TypeReference<T> clazz, int expectedCode, String operation) {
+    private <T> T unmarshallOrThrow(ApiResponseHttp res, TypeReference<T> clazz, String operation) {
         try {
+            System.out.println(res.getBody());
             return JsonUtils.unmarshallType(res.getBody(), clazz);
         } catch (Exception e) {
             ApiResponseError responseError = null;
@@ -128,12 +107,12 @@ public class PcuGroupDatacenterAssociationsClient extends AbstractApiClient {
             } catch (Exception ignored) {}
 
             if (responseError != null && responseError.getErrors() != null && !responseError.getErrors().isEmpty()) {
-                if (responseError.getErrors().getFirst().getId() == 2000367) {
+                if (responseError.getErrors().get(0).getId() == 2000367) {
                     throw PcuGroupNotFoundException.forId(pcuGroupId);
                 }
             }
 
-            throw new IllegalStateException("Expected code " + expectedCode + " to " + operation + " but got " + res.getCode() + "body=" + res.getBody());
+            throw new IllegalStateException("Expected code 2xx to " + operation + " but got " + res.getCode() + "body=" + res.getBody());
         }
     }
 }
